--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,20 +36,23 @@
     <string name="navDraw_text">Vertretungsplan der MES Kassel</string>
     <string name="settings_app">App-Einstellungen</string>
     <string name="nav_mes_website">MES-Website</string>
+    <string name="nav_cafeteria">Aktuelle Cafeteria Angebote</string>
     <string name="nav_submit_bug">Fehler / Ideen melden</string>
     <string name="news">Mitteilungen</string>
     <string name="new_news">Neue Nachricht</string>
+    <string name="news_wichtig_head">Wichtige Nachricht</string>
+    <string name="news_wichtig_text">Eine wichtige Nachricht ist verfügbar! Diese findest du unten im Navigations-Menü.</string>
     <string name="news_OpenWebsite">Öffne Link</string>
     <string name="navigation_drawer_open">Öffne Navigation Drawer</string>
     <string name="navigation_drawer_close">Schließe Navigation Drawer</string>
     
-    <string name="ks_update_available_head">Neue App verfügbar</string>
+<!--    <string name="ks_update_available_head">Neue App verfügbar</string>
     <string name="ks_update_available_text">Die Schulleitung hat ein neues System zur Verwaltung des Vertretungsplanes eingeführt, was bedeutet, dass diese App <b>bald</b> nicht mehr funktionieren wird.\nDaher wird es eine neue App, direkt vom Entwickler der VTPL-Software, geben. Um den Umstieg so einfach wie möglich zu machen, wird diese App aber noch einige Zeit funktionieren.\nUpdate bitte so bald wie möglich auf neuen App, da diese App ab sofort nicht mehr weiter entwickelt und nach einiger Zeit komplett abgeschaltet wird.\n\nWir hoffen, dass wir dir mit dieser App das Schulleben ein wenig einfacher gestalten konnten :)</string>
     <string name="ks_update_aviliable_later">Später</string>
     <string name="ks_update_kill_head">Neue App verfügbar</string>
     <string name="ks_update_kill_text">Die Schulleitung hat ein neues System zur Verwaltung des Vertretungsplanes eingeführt, was bedeutet, dass diese App <b>ab sofort</b> nicht mehr funktionieren wird.\nDaher wird es eine neue App, direkt vom Entwickler der VTPL-Software, geben.\nUpdate bitte <b>jetzt</b> zur neuen App, da diese App ab sofort nicht mehr weiter entwickelt und nicht mehr richtig funktionieren wird.\n\nWir hoffen, dass wir dir mit dieser App das Schulleben einfacher gestalten konnten :)\n\n(PS: Der Quellcode ist weiterhin gerne einsehbar)</string>
     <string name="ks_quellcode">Quellcode</string>
-    <string name="ks_update_newApp">Zur neuen App</string>
+    <string name="ks_update_newApp">Zur neuen App</string> -->
 
     <!-- Über / Einstellungen -->
     <string name="settings">Einstellungen</string>
@@ -59,7 +62,7 @@
     <string name="settings_checkbox_dbte_head">Bestätigung zum Beenden</string>
     <string name="settings_checkbox_dbte_body">Aktiviert eine Bestätigung zum Beenden der App (Double Back To Exit)</string>
     <string name="version">Changelog</string>
-    <string name="version_text">Version 1.5.9.9</string>
+    <string name="version_text">Version 1.6.0.1</string>
     <string name="changelog">Changelog</string>
     <string name="website">Website</string>
     <string name="website_text">Zur Max-Eyth-Schulwebsite</string>
